--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "parrotmedia-template-repo",
+  "name": "cinder-ash",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Website for Cinder Ash",
+  "main": "index.php",
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^10.2.4",
